Display at most 3 significant digits for the percentage

--- a/src/best-candidate/best-candidate.html
+++ b/src/best-candidate/best-candidate.html
@@ -1,6 +1,6 @@
 <div class="best-candidate">
   <div class="header">
-    <h3>Generation {{candidateGeneration()}}</h3>
+    <h3>Best of generation {{candidateGeneration()}}</h3>
     @if (doesCharacterMatch(); as matches) {
       <div class="match-percentage">
         {{matchPercentage()}}% match
